# ngram-injection-scanner

./: .env.example  .gitignore  LICENSE  README.md  llm.py  pyproject.toml
data/: injection_corpus.json  reference_set.json
notebooks/: 02_poison_detection.ipynb  03_result_analysis.ipynb
paper/: main.tex  references.bib
results/: asr_threshold_analysis.json  bootstrap_auc.json  latency_benchmark.json  ngram_ablation.json  openrouter_judges.json  public_benchmarks.json
scripts/: build_injection_corpus.py  build_reference_set.py  eval_asr.py  eval_chunk_level.py  eval_document_level.py  eval_judges.py  eval_latency.py  eval_ngram_ablation.py  eval_public_benchmarks.py
